--- a/src/main/resources/templates/editProd.html
+++ b/src/main/resources/templates/editProd.html
@@ -66,7 +66,11 @@
         </div>
         
         <div class="mb-3">
-          <label class="form-label">Upload Image</label>
+          <label class="form-label">Current Image</label>
+          <div>
+            <img th:src="${product.imageURL}" alt="Current Product Image" width="200" height="200" class="img-thumbnail mb-2"/>
+          </div>
+          <label class="form-label">Upload New Image</label>
           <input class="form-control" type="file" name="imageURL">
         </div>
         
