--- a/src/main/resources/templates/createProduct.html
+++ b/src/main/resources/templates/createProduct.html
@@ -97,6 +97,9 @@
         
         
         <button type="submit" class="btn btn-primary">Create Product</button>
+        <div class="col-md-6 d-grid">
+          <a class="btn btn-outline-primary" href="/ManagementProd" role="button">Cancel</a>
+        </div>
       </form>
     </div>
   </div>
